# data-extraction-tool

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_add_extraction_quality_and_vector.py  2d139719cbce_initial_schema.py
backend/app/: config.py  database.py  main.py
backend/app/ai/: client.py  example_selector.py  schemas.py
backend/app/ai/prompts/: extraction.py  grade.py  synthesis.py
backend/app/api/v1/: articles.py  auth.py  deps.py  export.py  extractions.py  grade.py  methodology.py  projects.py  router.py  templates.py  training.py
backend/app/models/: __init__.py  article.py  correction.py  extraction.py  extraction_template.py  grade_assessment.py  methodology_reference.py  pdf_page.py  project.py  task.py  training_example.py  user.py
backend/app/schemas/: article.py  extraction.py  grade_assessment.py  training.py  user.py
backend/app/services/: auth_service.py  export_service.py  extraction_service.py  grade_service.py  methodology_service.py  pdf_service.py  synthesis_service.py  template_service.py  training_service.py  validation_service.py
frontend/: index.html  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/api/: articles.ts  auth.ts  client.ts  extractions.ts
frontend/src/pages/: ArticleWorkspacePage.tsx  DashboardPage.tsx  LoginPage.tsx  ProjectWorkspacePage.tsx  ProjectsPage.tsx  SettingsPage.tsx  TrainingPage.tsx
frontend/src/store/: authStore.ts  extractionStore.ts  index.ts
(+14 files in other folders)
